@@ -42,6 +42,10 @@ Revision history for Fatal
         * TEST: Added t/crickey.t as an example of using fair dinkum
           subclasses of autodie.  Mate, I reckon it's time for a beer.
 
+        * INTERNAL: Moved exception architecture from inside-out
+          objects (which need lots of extra work under 5.8) to
+          regular hashes (which don't need extra work).
+
 1.10_07  Sun Jun 29 15:54:26 AEST 2008
 	* RELEASE CODENAME: "ikegami", in thanks for solving the problem
 	  of getting lexical replacement of subroutines working for real
